# packer-templates

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  build-all.sh  build.sh  cloudmonkey.sh  pyproject.toml  s3cfg.example
addons/cloudstack/: cloud-set-guest-password.in
centos65/: template.json
centos65/scripts/: cleanup.sh
debian75/: template.json
debian75/scripts/: install-set-hostname-script.sh  install-set-password-script.sh
files/: cloud-set-guest-password-centos  cloud-set-guest-password-freebsd  cloud-set-guest-password.service  cloud-set-guest-sshkey-centos  cloud-set-guest-sshkey-ubuntu  cloud-set-guest-sshkey.service  cloud-set-hostname-script
files/apt/: debian-10.sources  debian-11.sources  ubuntu-16.04.sources  ubuntu-18.04.sources  ubuntu-20.04.sources  ubuntu-22.04.sources
files/centos/: grub
files/cloudlinux-8/: cloud-set-guest-password
files/generic/: 99-disable-ipv6-tempaddr.conf  cloud-init.cfg  watchdog.conf
scripts/: gen-metadata.sh  install-set-password-script.sh  zerodisk.sh
templates/: almalinux-8.json  base.json  centos-7.7.json  centos-7.8.json  centos-7.json  centos-8.1.json  centos-8.2.json  centos-8.3.json  centos-8.json  centos77.json  centos81.json  cloudlinux-8.json  debian-10.3.json  debian-10.json  debian-11.json  debian103.json  fedora-31.json  fedora31.json  test-1.0.json  ubuntu-16.04.json  ubuntu-18.04.json  ubuntu-20.04.json  ubuntu-22.04.json  ubuntu1604.json  ubuntu1804.json
tpl/: cloudstack.ini.jinja  gitlab-ci_deploy.yml.jinja
ubuntu12044/: template.json
ubuntu1404/: template.json
(+292 files in other folders)
